--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
     <header class="header sticky top-0 z-50 py-3 px-4 sm:px-6 lg:px-8">
         <div class="max-w-7xl mx-auto flex justify-between items-center h-[60px]">
             <div id="headerTitleSection" class="header-title-container">
-                <!-- Title will be rendered here by JavaScript -->
-            </div>
+                </div>
             <div class="flex items-center space-x-2">
-                <button id="previewButton" class="action-button bg-purple-500 text-white hover:bg-purple-600" title="미리보기">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
-                    <span class="hidden sm:inline">미리보기</span>
-                </button>
-                <button id="savePdfButton" class="action-button bg-blue-500 text-white hover:bg-blue-600" title="PDF로 저장">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16"y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-                    <span class="hidden sm:inline">PDF 저장</span>
-                </button>
                 <button id="saveHtmlButton" class="action-button bg-orange-500 text-white hover:bg-orange-600" title="HTML 파일로 저장">
                      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path><polyline points="17 21 17 13H7v8"></polyline><polyline points="7 3 7 8H3"></polyline></svg>
                     <span class="hidden sm:inline">HTML 저장</span>
+                </button>
+                <button id="copyInlineHtmlButton" class="action-button bg-teal-500 text-white hover:bg-teal-600" title="인라인 코드 복사">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                        <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                    </svg>
+                    <span class="hidden sm:inline">인라인 코드 복사</span>
+                </button>
+                <button id="inlinePreviewButton" class="action-button bg-cyan-500 text-white hover:bg-cyan-600" title="인라인 형식 미리보기">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg>
+                    <span class="hidden sm:inline">인라인 출력</span>
                 </button>
                 <input type="file" id="loadHtmlInput" accept=".html" style="display: none;">
                 <button id="loadHtmlButtonTrigger" class="action-button bg-yellow-500 text-white hover:bg-yellow-600" title="HTML 파일에서 불러오기">
@@ -46,8 +48,7 @@
 
     <main class="main-content max-w-7xl mx-auto p-4 sm:p-6 lg:p-8">
         <div id="daysContainer" class="space-y-4">
-            <!-- Days will be rendered here by JavaScript -->
-        </div>
+            </div>
 
         <div class="add-day-button-container mt-6 text-center">
             <button id="addDayButton" class="action-button bg-indigo-500 text-white hover:bg-indigo-600">
@@ -70,7 +71,7 @@
                 </div>
                 <div>
                     <label for="activityIconSelect">아이콘 선택:</label>
-                    <select id="activityIconSelect"> <!-- Options will be populated by JavaScript --></select>
+                    <select id="activityIconSelect"> </select>
                 </div>
                 <div>
                     <label for="activityTitle">활동/장소명:</label>
@@ -115,8 +116,7 @@
     </div>
 
     <div id="toast" class="fixed bottom-5 right-5 bg-gray-800 text-white py-2 px-4 rounded-md shadow-lg transition-opacity duration-300 opacity-0">
-        <!-- Toast message will be shown here by JavaScript -->
-    </div>
+        </div>
 
     <script src="script.js"></script>
 </body>
