--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
                 </div>
             <div class="flex items-center space-x-2">
                 <button id="saveHtmlButton" class="action-button bg-orange-500 text-white hover:bg-orange-600" title="HTML 파일로 저장">
-                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path><polyline points="17 21 17 13H7v8"></polyline><polyline points="7 3 7 8H3"></polyline></svg>
+                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
+                        <path d="M17 21 L17 13 H7 v8"></path> 
+                        <path d="M7 3 L7 8 H3"></path>
+                    </svg>
                     <span class="hidden sm:inline">HTML 저장</span>
                 </button>
                 <button id="copyInlineHtmlButton" class="action-button bg-teal-500 text-white hover:bg-teal-600" title="인라인 코드 복사">
