--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
             <div id="headerTitleSection" class="header-title-container">
                 </div>
             <div class="flex items-center space-x-2">
-                <button id="saveHtmlButton" class="action-button bg-orange-500 text-white hover:bg-orange-600" title="HTML 파일로 저장">
+                <button id="saveHtmlButton" class="action-button bg-orange-500 text-white hover:bg-orange-600" title="현재 일정 저장 (DB)">
                      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
-                        <path d="M17 21 L17 13 H7 v8"></path> 
+                        <path d="M17 21 L17 13 H7 v8"></path>
                         <path d="M7 3 L7 8 H3"></path>
                     </svg>
-                    <span class="hidden sm:inline">HTML 저장</span>
+                    <span class="hidden sm:inline">DB에 저장</span>
+                </button>
+                <button id="saveAsNewToDbButton" class="action-button bg-blue-500 text-white hover:bg-blue-600" title="현재 내용을 DB에 새 이름으로 저장">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        {/* 아이콘은 적절한 것으로 변경하시는 것을 추천합니다. 아래는 임시 아이콘입니다. */}
+                        <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path><path d="M17 16h-4v4h-2v-4H7v-2h4V7h2v7h4z"></path>
+                    </svg>
+                    <span class="hidden sm:inline">DB 다른이름 저장</span>
                 </button>
                 <button id="copyInlineHtmlButton" class="action-button bg-teal-500 text-white hover:bg-teal-600" title="인라인 코드 복사">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -37,9 +44,9 @@
                     <span class="hidden sm:inline">인라인 출력</span>
                 </button>
                 <input type="file" id="loadHtmlInput" accept=".html" style="display: none;">
-                <button id="loadHtmlButtonTrigger" class="action-button bg-yellow-500 text-white hover:bg-yellow-600" title="HTML 파일에서 불러오기">
+                <button id="loadHtmlButtonTrigger" class="action-button bg-yellow-500 text-white hover:bg-yellow-600" title="DB에서 일정 불러오기">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="17 8 12 3 7 8"></polyline><line x1="12" y1="3" x2="12" y2="15"></line></svg>
-                    <span class="hidden sm:inline">HTML 불러오기</span>
+                    <span class="hidden sm:inline">DB에서 불러오기</span>
                 </button>
                 <input type="file" id="loadExcelInput" accept=".xlsx, .csv" style="display: none;">
                 <button id="loadExcelButtonTrigger" class="action-button bg-green-500 text-white hover:bg-green-600" title="엑셀 파일에서 불러오기">
@@ -119,9 +126,26 @@
         </div>
     </div>
 
+    <div id="loadTripModal" class="modal-backdrop hidden">
+        <div class="modal-content">
+            <h3 class="text-lg font-semibold mb-4">불러올 여행 일정 선택</h3>
+            <div id="tripListContainer" class="max-h-60 overflow-y-auto border p-2 rounded">
+                <p id="loadingTripListMsg" style="display: none;">목록을 불러오는 중...</p>
+                <ul id="tripListForLoad" class="space-y-1">
+                    {/* */}
+                </ul>
+            </div>
+            <div class="modal-buttons mt-6">
+                <button type="button" id="cancelLoadTripModalButton" class="action-button bg-gray-300 hover:bg-gray-400">취소</button>
+            </div>
+        </div>
+    </div>
     <div id="toast" class="fixed bottom-5 right-5 bg-gray-800 text-white py-2 px-4 rounded-md shadow-lg transition-opacity duration-300 opacity-0">
         </div>
 
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="script.js"></script>
+
 </body>
 </html>
