--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header sticky top-0 z-50 py-3 px-4 sm:px-6 lg:px-8">
         <div class="max-w-7xl mx-auto flex justify-between items-center h-[60px]">
             <div id="headerTitleSection" class="header-title-container">
-                </div>
+            </div>
             <div class="flex items-center space-x-2">
                 <button id="saveHtmlButton" class="action-button bg-orange-500 text-white hover:bg-orange-600" title="현재 일정 저장 (DB)">
                      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -27,21 +27,20 @@
                 </button>
                 <button id="saveAsNewToDbButton" class="action-button bg-blue-500 text-white hover:bg-blue-600" title="현재 내용을 DB에 새 이름으로 저장">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        {/* 아이콘은 적절한 것으로 변경하시는 것을 추천합니다. 아래는 임시 아이콘입니다. */}
                         <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path><path d="M17 16h-4v4h-2v-4H7v-2h4V7h2v7h4z"></path>
                     </svg>
                     <span class="hidden sm:inline">DB 다른이름 저장</span>
                 </button>
-                <button id="copyInlineHtmlButton" class="action-button bg-teal-500 text-white hover:bg-teal-600" title="인라인 코드 복사">
+                <button id="copyInlineHtmlButton" class="action-button bg-teal-500 text-white hover:bg-teal-600" title="코드 복사">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                         <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
                     </svg>
-                    <span class="hidden sm:inline">인라인 코드 복사</span>
+                    <span class="hidden sm:inline">코드 복사</span>
                 </button>
                 <button id="inlinePreviewButton" class="action-button bg-cyan-500 text-white hover:bg-cyan-600" title="인라인 형식 미리보기">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg>
-                    <span class="hidden sm:inline">인라인 출력</span>
+                    <span class="hidden sm:inline">미리보기</span>
                 </button>
                 <input type="file" id="loadHtmlInput" accept=".html" style="display: none;">
                 <button id="loadHtmlButtonTrigger" class="action-button bg-yellow-500 text-white hover:bg-yellow-600" title="DB에서 일정 불러오기">
@@ -129,10 +128,9 @@
     <div id="loadTripModal" class="modal-backdrop hidden">
         <div class="modal-content">
             <h3 class="text-lg font-semibold mb-4">불러올 여행 일정 선택</h3>
-            <div id="tripListContainer" class="max-h-60 overflow-y-auto border p-2 rounded">
+            <div id="tripListContainer" class="max-h-72 overflow-y-auto border p-2 rounded">
                 <p id="loadingTripListMsg" style="display: none;">목록을 불러오는 중...</p>
                 <ul id="tripListForLoad" class="space-y-1">
-                    {/* */}
                 </ul>
             </div>
             <div class="modal-buttons mt-6">
@@ -140,11 +138,13 @@
             </div>
         </div>
     </div>
+
     <div id="toast" class="fixed bottom-5 right-5 bg-gray-800 text-white py-2 px-4 rounded-md shadow-lg transition-opacity duration-300 opacity-0">
         </div>
 
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    
     <script src="script.js"></script>
 
 </body>
