--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
     <div id="loadTripModal" class="modal-backdrop hidden">
         <div class="modal-content">
             <h3 class="text-lg font-semibold mb-4">불러올 여행 일정 선택</h3>
+            <div class="mb-3">
+                <input type="text" id="tripSearchInput" placeholder="여행 제목으로 검색..." class="w-full p-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500">
+            </div>
             <div id="tripListContainer" class="max-h-72 overflow-y-auto border p-2 rounded">
                 <p id="loadingTripListMsg" style="display: none;">목록을 불러오는 중...</p>
                 <ul id="tripListForLoad" class="space-y-1">
